# rustgate

./: README.md
backend/: .gitignore  pyproject.toml
backend/src/: __init__.py  _common.py  auto_py.py  funcs.py  main.py  main_py.py  main_rust.py
bindings/: Cargo.toml
bindings/src/: lib.rs
graph/: main.py  pyproject.toml
scripts/: benchmark.sh
