[package]
name = "rustgate-bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustgate_bindings"
crate-type = ["cdylib"]

[dependencies]
axum-rate-limiter = { git = "https://github.com/MordechaiHadad/axum-rate-limiter", features = ["redis"] }
pyo3 = { version = "0.28.3", features = ["extension-module", "experimental-async"] }
redis = { version = "1.2.0", features = ["tokio-comp"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
